--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
+  "description": "## Project: Access Control",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -38,5 +38,6 @@
   "bugs": {
     "url": "https://github.com/401-advanced-javascript-nathanRcox/auth-api/issues"
   },
-  "homepage": "https://github.com/401-advanced-javascript-nathanRcox/auth-api#readme"
+  "homepage": "https://github.com/401-advanced-javascript-nathanRcox/auth-api#readme",
+  "devDependencies": {}
 }
