--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "eslint": "^7.14.0",
+    "eslint": "^7.15.0",
     "express": "^4.17.1",
     "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
-    "mongoose": "^5.10.15",
+    "mongoose": "^5.11.8",
     "morgan": "^1.10.0",
-    "supertest": "^6.0.1"
+    "supertest": "^6.0.1",
+    "uuid": "^8.3.2"
   },
   "repository": {
     "type": "git",
